# watermark-remover

./: README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
fastlane/: Appfile  Fastfile  Matchfile
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  gemini_client.rs  image_processor.rs  lib.rs  main.rs  video_processor.rs
src/components/: BatchQueuePanel.tsx  ImageDropZone.tsx  OptionsPanel.tsx  PreviewPanel.tsx  RegionSelector.tsx  SettingsModal.tsx  VideoProgress.tsx
src/hooks/: useWatermarkRemoval.ts
src/types/: watermark.ts
