[package]
name = "watermark-remover"
version = "0.1.0"
description = "A Tauri App for removing watermarks from images"
authors = ["you"]
edition = "2021"

[lib]
name = "watermark_remover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "~2.9", features = [] }
tauri-plugin-opener = "~2.2"
tauri-plugin-dialog = "~2.2"
tauri-plugin-fs = "~2.2"
tauri-plugin-store = "~2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
opencv = { version = "0.92", default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs", "photo", "videoio"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
